HikariCP Changes

Changes in 6.2.2

 * increase keepaliveTime variance from 10% to 20%

Changes in 6.2.1

 * change default keepaliveTime to 2 minutes

 * fix commons-compress dependency, make test scope

Changes in 6.2.0

 * merged #2238 handle SQLTimeoutException without eviction. Users looking to preserve previous behavior
   should provide an implementation of com.zaxxer.hikari.SQLExceptionOverride to the pool configuration.

 * added new enum value, Override.MUST_EVICT, available to implementations of com.zaxxer.hikari.SQLExceptionOverride

 * enhanced debug logging in circumstances where the pool falls to zero size and new coonections to the database
   continue to fail.

 * update test dependencies that were flagged as having vulnerabilities

Changes in 6.1.0

 * fixed #1960 allow SQLExceptionOverride to adjudicate all exceptions for eviction

 * merged #1962 dropwizard 5 metrics are now supported via the setMetricRegistry() method in HikariConfig and in HikariDataSource

 * merged #2244 improve JavassistProxyFactory

 * merged #2243 fix inconsistency between isWrapperFor and unwrap

 * merged #1827 support loading properties file in unnamed resources module

 * merged #1842 don't clear isCommitStateDirty flag in setReadOnly

 * change default maxLifetime variance from 2.5% to 25% to further avoid mass connection die-off dips

Changes in 6.0.0

 * fixed #2152 duplicate connection in try with resources clause caused close() being called twice on each connection

 * merged #2226 consistent handling of errorCode and sqlState in timeout exception

 * merged #2199 eliminate network call if state get is called after set

 * merged #2189 add support to get and set db credentials in an atomic operation

 * merged #2149 make Savepoint rollbacks mark the connection dirty

 * merged #2157 close connections marked as evicted instead of returning them to the pool

 * merged #2147 skip Connection::setNetworkTimeout if PoolBase::shutdownNetworkTimeoutExecutor is called
