@@ -1,0 +1,8 @@
+connectionTimeout = 11ms
+validationTimeout = 22s
+idleTimeout = 33m
+leakDetectionThreshold = 44h
+maxLifetime = 55d
+
+dataSourceClassName=com.zaxxer.hikari.mocks.StubDataSource
+dataSource.loginTimeout = 47m
